# notionary

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  LICENSE  README.md  et --soft HEAD~1  fix_block_data_imports.py  index.html  manual_discovery_system_prompt.txt  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test_syntax_prompt_builder.py
.claude/: settings.local.json
.github/workflows/: ci.yaml  coverage.yaml  docs-check.yml  mkdocs.yml  python-tests.yaml
contributing/: index.html
docs/: contributing.md  data_source.md  database.md  features.md  file_upload.md  getting-started.md  index.html  index.md  installation.md  intro.md  markdown.md  mcp.md  page.md  quickstart.md  shoutouts.md  workspace.md
docs/api/: data_source.md  database.md  exceptions.md  file_uploads.md  notionary.md  page.md  users.md  workspace.md
docs/assets/: styles.css
docs/blocks/: blocks.md  breadcrumb.md  bulleted_list.md  callout.md  code.md  column.md  divider.md  embed.md  equation.md  file.md  heading.md  image.md  index.md  markdown_lookup.md  numbered_list.md  paragraph.md  pdf.md  quote.md  rich_text.md  space.md  synced_block.md  table.md  table_of_contents.md  todo.md  toggle.md  video.md
docs/contributing/: index.md
docs/data_source/: index.md
docs/database/: connecting.md  create_page.md  customization.md  index.md
docs/file_upload/: index.md  integration.md  query.md  resolver.md
docs/get-started/: index.md
docs/page/: content.md  customization.md  index.md
docs/workspace/: index.md
examples/: batch_processing.py  column_temp.py  current_integration_discovery.py  data_source_namespace.py  database.py  database_discovery_example.py  database_factory_example.py  database_iteration.py  database_iteration_example.py  database_management_example.py  database_repl.py  databases.py  discovery_example.py  example_notion_database_accessor.py  example_notion_database_factory.py  example_notion_database_manager.py  example_notion_database_writer.py  example_page_manager.py  file_upload.py  files.py  global_search.py  integration_information.py  iter_database_entries.py  iter_databases.py  markdown_syntax_prompt_example.py  mcp_agent.py  notion_bot_user.py  notion_user.py  page.py  page_example.py  page_example_complicated.py  page_factory_by_name_example.py  page_factory_by_url_example.py  page_factory_example.py  page_icon_without_icon.py  page_markdown.py  pages.py  temp.py  user_namespace.py  workspace.py  (+1 more)
examples/data_source/: create_by_title.py  create_by_url.py  create_meme_page.py  create_page.py  describe_properties.py  find_data_source.py  list_data_sources.py  manage_data_source.py  page_discovery.py  query_data_source.py
examples/file_upload/: audio.py  complete_demo.py  file.py  file_upload_bytes.py  image.py  pdf.py  small_file_upload.py  video.py
examples/file_uploads/: list_files.py  upload_bytes.py  upload_file.py
examples/markdown/: audio.py  basic.py  callout.py  code.py  columns.py  embed.py  markdown_builder.py  mermaid.py  overview.py  table.py  toggle.py  toggleable_heading.py  toggles.py
examples/page/: comments.py  content.py  creation_by_title.py  creation_by_url.py  customize_page.py  list_pages.py  page_comments.py  page_lifecycle.py  page_properties.py  read_page.py  write_content.py
examples/ressources/: markdown_demo.py
examples/user/: bot_identity.py  list_users.py
examples/workspace/: data_source_discovery.py  data_source_discovery_with_query.py  databases.py  page_discovery.py  page_discovery_with_query.py  search_workspace.py
features/: index.html
getting-started/: index.html
notionary/: __init__.py  base_notion_client.py  client.py  http_client.py  main.py  notion_client.py  notionary.py  search.py  service.py  workspace.py
notionary/agent/: agent.py  models.py  tools.py
notionary/blocks/: __init__.py  _bootstrap.py  audio_element.py  base_block_element.py  block_client.py  block_http_client.py  block_models.py  block_types.py  bookmark_element.py  bulleted_list_element.py  callout_element.py  client.py  code_block_element.py  column_element.py  divider_element.py  document_element.py  embed_element.py  enums.py  guards.py  heading_element.py  image_element.py  (+17 more)
reference/: index.html
search/: search_index.json
src/: index.css
temp/: caption_syntax_test.py  columns.py  debug.py  demo.py  equation.py  image.py  markdown.py  markdown_2.py  paragraph.py  parser_update_checklist.py  read.py  read2.py  read_content.py  replace.py  resolver.py  test.py  test2.py  test_datasource_client.py  test_deprecation_warning.py  test_external_icon.py  test_page.py  test_page_properties.py  test_post_comment.py  test_property_schema.py  test_rich_text_reading.py  test_search.py  test_structured_output.py  test_user_manager.py  user_api.py
tests/: batch_processing_stress_test.py  block_element_registry_prompt_tuning.py  conftest.py  notion_database_smoke_test.py  notion_page_smoke_test.py  stress_test.py  test_markdown_builder.py  test_markdown_nodes.py  test_notion_content_converter.py  test_page_content_retriever.py
(+1600 files in other folders)
