[project]
name = "notionary"
version = "0.2.27"
description = "Python library for programmatic Notion workspace management - databases, pages, and content with advanced Markdown support"
authors = [{ name = "Mathis Arends", email = "mathisarends27@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.11.4",
    "aiofiles (>=24.1.0,<25.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
]

[project.urls]
Homepage = "https://github.com/mathisarends/notionary"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.15,<10",
    "black>=25.1.0,<26",
    "pytest>=8.4.1,<9",
    "pytest-asyncio>=1.1.0,<2",
    "pytest-mock>=3.14.1,<4",
    "pytest-cov>=6.2.1,<7",
    "isort>=6.0.1,<7",
    "mypy>=1.17.1,<2",
]
