[project]
name = "notionary"
version = "0.2.27"
description = "Python library for programmatic Notion workspace management - databases, pages, and content with advanced Markdown support"
authors = [{ name = "Mathis Arends", email = "mathisarends27@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.11.4",
    "aiofiles(>=24.1.0,<25.0.0)",
    "python-dotenv(>=1.1.1,<2.0.0)",
]

[project.urls]
Homepage = "https://github.com/mathisarends/notionary"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.15,<10",
    "black>=25.1.0,<26",
    "pytest>=8.4.1,<9",
    "pytest-asyncio>=1.1.0,<2",
    "pytest-mock>=3.14.1,<4",
    "pytest-cov>=6.2.1,<7",
    "isort>=6.0.1,<7",
    "mypy>=1.17.1,<2",
    "ruff>=0.13.1",
    "pre-commit>=4.3.0",
]


[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","PL","RUF","C90"]
ignore = [
  "E501",     # Zeile zu lang
  "E402",     # Imports nicht am Dateianfang
  "PLC0415",  # Import should be at top-level  <- HINZUFÜGEN
  "PLR2004",  # Magic values
  "PLR0911",  # Too many return statements
  "PLR0912",  # Too many branches
  "PLR0913",  # Too many arguments
  "PLR0915",  # Too many statements
  "C901",     # Function too complex
  "B024",     # ABC ohne abstrakte Methoden
  "B027",     # ABC leere Methoden ohne @abstractmethod
  "B904",     # raise ... from e
  "E722",     # bare except
  "RUF012",   # Mutable class attribute -> ClassVar
  "RUF006",   # create_task Returnwert nicht gespeichert
  "SIM108",   # Ternary-Simplify
  "PLW0603",  # global statement
  "PLW2901",  # Loop-Variable überschrieben
  "RUF001",   # En Dash etc.
  "RUF003",   # Comment contains ambiguous character  <- Wenn Sie wollen
  "UP045",    # Use X | None for type annotations      <- Wenn Sie wollen
  "F811",     # Redefinition of unused variable        <- Wenn Sie wollen
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
