[project]
name = "notionary"
version = "0.6.3"
description = "Python library for programmatic Notion workspace management - databases, pages, and content with advanced Markdown support"
authors = [{ name = "Mathis Arends", email = "mathisarends27@gmail.com" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.11.4",
    "aiofiles>=24.1.0,<25.0.0",
]

[project.scripts]
notionary = "notionary.cli:main"
notionary-mcp = "notionary.mcp.server:main"

[project.urls]
Homepage = "https://github.com/mathisarends/notionary"

[project.optional-dependencies]
mcp = [
    "fastmcp>=3.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notionary"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.15,<10",
    "mkdocstrings[python]>=0.28.0",
    "pytest>=8.4.1,<9",
    "pytest-asyncio>=1.1.0,<2",
    "pytest-mock>=3.14.1,<4",
    "pre-commit>=4.3.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","PL","RUF","C90"]
ignore = [
  "E501",     # line too long
  "E402",     # imports not at top of file
  "PLC0415",  # import should be at top-level
  "PLR2004",  # magic values
  "PLR0911",  # too many return statements
  "PLR0912",  # too many branches
  "PLR0913",  # too many arguments
  "PLR0915",  # too many statements
  "C901",     # function too complex
  "RUF006",   # create_task return value not stored
  "PLW0603",  # global statement
  "PLW2901",  # loop variable overwritten
  "RUF001",   # en dash, etc.
  "UP046",    # derive from generic base class
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
